
PIG-3444: CONCAT with 2+ input parameters fail (lbendig via daijy)

PIG-3117: A debug mode in which pig does not delete temporary files (ihadanny via cheolsoo)

PIG-3484: Make the size of pig.script property configurable (cheolsoo)
 
OPTIMIZATIONS

PIG-3882: Multiquery off mode execution is not done in batch and very inefficient (rohini)
 
BUG FIXES

PIG-3885: AccumuloStorage incompatible with Accumulo 1.6.0 (elserj via daijy)

PIG-3888: Direct fetch doesn't differentiate between frontend and backend sides (lbendig via daijy)

PIG-3887: TestMRJobStats is broken in trunk (cheolsoo)

PIG-3868: Fix Iterator_1 e2e test on windows (ssvinarchukhorton via rohini)

PIG-3871: Replace org.python.google.* with com.google.* in imports (cheolsoo)

PIG-3858: PigLogger/PigStatusReporter is not set for fetch tasks (lbendig via cheolsoo)

PIG-3798: Registered jar in pig script are appended to the classpath multiple times (cheolsoo)

PIG-3844: Make ScriptState InheritableThreadLocal for threads that need it (amatsukawa via cheolsoo)

PIG-3837: ant pigperf target is broken in trunk (cheolsoo)

PIG-3836: Pig signature has has guava version dependency (amatsukawa via cheolsoo)

PIG-3832: Fix piggybank test compilation failure after PIG-3449 (rohini)

PIG-3807: Pig creates wrong schema after dereferencing nested tuple fields with sorts (daijy)

PIG-3802: Fix TestBlackAndWhitelistValidator failures (prkommireddi)

PIG-3815: Hadoop bug causes to pig to fail silently with jar cache (aniket486)

PIG-3816: Incorrect Javadoc for launchPlan() method (kyungho via prkommireddi)

PIG-3673: Divide by zero error in runpigmix.pl script (suhassatish via daijy)

PIG-3805: ToString(datetime [, format string]) doesn't work without the second argument (jennythompson via daijy)

PIG-3809: AddForEach optimization doesn't set the alias of the added foreach (cheolsoo)

PIG-3811: PigServer.registerScript() wraps exception incorrectly on parsing errors (prkommireddi)
